# rust-claude-code

./: .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json.bak
.claude/rules/: test.md
crates/api/: Cargo.toml
crates/api/examples/: simple_chat.rs  streaming_chat.rs
crates/api/src/: client.rs  error.rs  lib.rs  model_client.rs  streaming.rs  types.rs
crates/api/tests/: client.rs
crates/cli/: Cargo.toml
crates/cli/src/: compaction.rs  hooks.rs  lib.rs  main.rs  query_loop.rs  session.rs  system_prompt.rs
crates/cli/tests/: query_loop_local.rs
crates/core/: Cargo.toml
crates/core/src/: claude_md.rs  compaction.rs  config.rs  custom_agents.rs  file_state_cache.rs  git.rs  hooks.rs  lib.rs  mcp_config.rs  memory.rs  message.rs  model.rs  permission.rs  session.rs  settings.rs  state.rs  tool_types.rs  trust.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: error.rs  jsonrpc.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: agent_loop.rs  compaction.rs  hooks.rs  lib.rs  output.rs  plugin.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent_tool.rs  ask_user_question.rs  auto_memory.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  lsp_tool.rs  mcp_proxy.rs  monitor.rs  notebook_edit_tool.rs  plan_mode.rs  registry.rs  task_tool.rs  todo_write.rs  tool.rs  web_fetch_tool.rs  web_search_tool.rs
crates/tools/src/lsp/: error.rs  language.rs  manager.rs  mod.rs  protocol.rs  transport.rs
crates/tools/src/web/: fetch.rs  mod.rs  search.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  bridge.rs  diff.rs  events.rs  highlight.rs  lib.rs  slash.rs  streaming_markdown.rs  theme.rs  ui.rs
doc/: 2026-05-03_review.md  feature-gap-analysis.md  iteration-3-alignment.md  phase3-iteration-plan.md  phase4-iteration-plan.md  requirement.md
openspec/: config.yaml
openspec/changes/archive/2026-04-16-iteration-12-search-tools/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-iteration-13-claude-md/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-iteration-14-compaction/: tasks.md
openspec/changes/archive/2026-04-16-iteration-15-api-enhancement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-iteration-16-tui-core-interaction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-17-fix-chat-content-scroll/: proposal.md  tasks.md
openspec/changes/archive/2026-04-17-iteration-17-config-git-slash-commands/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-iteration-18-hooks-system/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-iteration-19-mcp-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-iteration-20-agent-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-iteration-22/: design.md  (+2 more)
openspec/changes/fix-chat-content-scroll/: design.md
openspec/changes/iteration-14-compaction/: design.md  diff-summary.md  proposal.md  tasks.md
openspec/changes/iteration-25-tui-advanced-interaction/: design.md  proposal.md  tasks.md
openspec/changes/iteration-26-agent-capability-gaps/: proposal.md
openspec/changes/iteration-27-permission-settings/: tasks.md
openspec/changes/iteration-30/: design.md  tasks.md
openspec/changes/iteration-31/: design.md  tasks.md
openspec/changes/tui-slash-command-skill-hints/: design.md  proposal.md  tasks.md
openspec/specs/agent-tool/: spec.md
openspec/specs/claude-md-discovery/: spec.md
openspec/specs/cli-print-streaming/: spec.md
openspec/specs/compact-command/: spec.md
openspec/specs/compaction-engine/: spec.md
openspec/specs/custom-agents/: spec.md
openspec/specs/diff-preview/: spec.md
openspec/specs/extended-thinking/: spec.md
openspec/specs/git-context-integration/: spec.md
openspec/specs/glob-tool/: spec.md
openspec/specs/grep-tool/: spec.md
openspec/specs/hook-config/: spec.md
openspec/specs/hook-execution/: spec.md
openspec/specs/hook-integration/: spec.md
openspec/specs/image-content-blocks/: spec.md
openspec/specs/lsp-tool/: spec.md
openspec/specs/max-tokens-recovery/: spec.md
openspec/specs/mcp-client-stdio/: spec.md
openspec/specs/mcp-remote-transports/: spec.md
openspec/specs/memory-command-lite/: spec.md
openspec/specs/memory-contract/: spec.md
openspec/specs/memory-corpus/: spec.md
openspec/specs/memory-dedup-correction/: spec.md
openspec/specs/memory-maintenance/: spec.md
openspec/specs/model-fallback/: spec.md
openspec/specs/notebook-edit-tool/: spec.md
openspec/specs/plugin-system/: spec.md
openspec/specs/provider-routing/: spec.md
openspec/specs/review-command/: spec.md
openspec/specs/sandbox-execution/: spec.md
openspec/specs/sdk-foundation/: spec.md
openspec/specs/settings-merge/: spec.md
openspec/specs/slash-command-extensions/: spec.md
openspec/specs/syntax-highlighting/: spec.md
openspec/specs/tui-input-experience/: spec.md
openspec/specs/tui-markdown-rendering/: spec.md
openspec/specs/tui-stream-controls/: spec.md
openspec/specs/tui-streaming-markdown/: spec.md
openspec/specs/tui-thinking-streaming/: spec.md
openspec/specs/tui-tool-streaming/: spec.md
openspec/specs/usage-based-token-counting/: spec.md
openspec/specs/web-search/: spec.md
(+120 files in other folders)
