[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/mcp",
    "crates/tools",
    "crates/tui",
    "crates/cli",
    "crates/sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-core = "0.3"
eventsource-stream = "0.2"
ratatui = { version = "0.27.0", default-features = false, features = ["crossterm"] }
crossterm = "0.28.1"
clap = { version = "4.5.20", features = ["derive"] }
unicode-width = "0.1"
