[package]
name = "rust-claude-api"
version.workspace = true
edition.workspace = true

[dependencies]
rust-claude-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-core = { workspace = true }
futures-util = "0.3"
eventsource-stream = { workspace = true }
