[package]
name = "rust-claude-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
rust-claude-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
