[package]
name = "rust-claude-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
rust-claude-core = { path = "../core" }
rust-claude-api = { path = "../api" }
rust-claude-tools = { path = "../tools" }
rust-claude-mcp = { path = "../mcp" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
